--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ramazan-portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ramazan-carpan.github.io",
+  "homepage": "https://ramazan-carpan.github.io/RamazanCarpan.github.io/",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.1",
     "@testing-library/jest-dom": "^5.17.0",
